k8s/service-acct.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
